# rpa-mba

./: README.md  contatos_whatsapp.xlsx  main.py  pyproject.toml  rpa.ipynb  rpa.py  rpa_aula001.ipynb  rpa_aula002.ipynb
relatorios_powercrm/: CRM.xlsx
